fixed Overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 body {
   margin: 0;
-  overflow: hidden;
+  
   font-family: 'Orbitron', sans-serif;
   background-color: rgb(17, 17, 17);
 }
